--- a/package.json
+++ b/package.json
@@ -38,16 +38,20 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@vercel/analytics": "1.3.1",
+    "alchemy-sdk": "^3.6.5",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "html5-qrcode": "^2.3.8",
     "input-otp": "1.4.1",
+    "jsqr": "^1.4.0",
     "lucide-react": "^0.454.0",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
+    "qrcode.react": "^4.2.0",
     "react": "19.2.0",
     "react-day-picker": "9.8.0",
     "react-dom": "19.2.0",
@@ -55,13 +59,10 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
     "sonner": "^1.7.4",
+    "swr": "^2.3.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "qrcode.react": "^4.2.0",
-    "html5-qrcode": "^2.3.8",
-    "jsqr": "^1.4.0",
-    "swr": "^2.3.3",
     "zod": "3.25.76"
   },
   "devDependencies": {
