--- a/package.json
+++ b/package.json
@@ -37,6 +37,11 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@reown/appkit": "^1.8.18",
+    "@reown/appkit-adapter-wagmi": "^1.8.18",
+    "@solana/kit": "^5.5.1",
+    "@solana/web3.js": "^1.98.4",
+    "@tanstack/react-query": "^5.90.21",
     "@vercel/analytics": "1.3.1",
     "alchemy-sdk": "^3.6.5",
     "autoprefixer": "^10.4.20",
@@ -58,11 +63,15 @@
     "react-hook-form": "^7.60.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
+    "resend": "^6.9.2",
     "sonner": "^1.7.4",
     "swr": "^2.3.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^13.0.0",
     "vaul": "^1.1.2",
+    "viem": "^2.46.0",
+    "wagmi": "^3.4.3",
     "zod": "3.25.76"
   },
   "devDependencies": {
